Updated swagger UI API Docs: Documented the following routes: create/read projects, query-projecets and get-project-progress/{projectId}.
